--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
       padding:16px 14px;
       position:sticky; top:0; align-self:start; height:100vh; overflow:auto;
     }
-    .content { padding:24px; }
-    .wrap { max-width: 1100px; margin: 0 auto; }
+    .content { padding: 16px 24px 24px 12px; } 
+    .wrap { max-width:1100px; margin:0; }
 
     /* ===== Header: brand row then title row ===== */
     .brand-block { margin-bottom: 8px; }
@@ -91,11 +91,11 @@
       <div class="brand-block">
         <div class="brand-row">
           <img src="/assets/allegis-logo.svg" alt="Allegis Capital">
+       .sidebar .brand-row { margin-bottom: 44px; }  /* ~4 lines of space */
         </div>
       </div>
 
       <div class="nav-section">
-        <div class="nav-title">Navigation</div>
         <nav class="nav">
           <!-- IDs preserved so existing router logic keeps working -->
           <a href="#/transactions" id="linkTx" class="active">Transactions</a>
@@ -454,3 +454,4 @@
   </script>
 </body>
 </html>
+
