--- a/public/index.html
+++ b/public/index.html
@@ -33,19 +33,38 @@
     /* ===== Header: brand row then title row ===== */
     .brand-block { margin-bottom: 8px; }
     .brand-row { display:flex; align-items:center; gap:12px; }
-    .brand-row img { height:56px; } /* <-- bigger logo */
-    .title-row { display:flex; align-items:baseline; gap:12px; margin-top:8px; }
+    .brand-row img { height:56px; } /* larger logo */
+    .title-row { display:flex; align-items:flex-start; gap:12px; margin-top:8px; }
     .title { font-size:28px; font-weight:700; color:var(--navy); }
     .sub { color:#666; font-size:12px; }
 
-    /* ===== Top right status area ===== */
-    .topbar { display:flex; align-items:flex-start; justify-content:flex-end; gap:8px; }
+    /* ===== Top right status/controls ===== */
+    .topbar { margin-left:auto; display:flex; align-items:flex-start; gap:8px; position:relative; }
     .statusline { display:flex; align-items:center; gap:8px; flex-wrap:wrap; }
     #status { color:#b00; min-height:16px; }
 
+    /* ===== Impersonation (in topbar) ===== */
+    .imp { position:relative; }
+    .imp-btn {
+      background:#fff; border:1px solid #ccd6ee; border-radius:8px; padding:6px 10px; cursor:pointer;
+      font-size:12px;
+    }
+    .imp-panel {
+      position:absolute; right:0; top:36px; z-index:10;
+      background:#fff; border:1px solid #ccd6ee; border-radius:10px; padding:10px; box-shadow:0 6px 18px rgba(0,0,0,.12);
+      width:520px;
+    }
+    .imp-panel.hidden { display:none; }
+    .imp-row { display:flex; gap:8px; flex-wrap:wrap; }
+    .imp-panel input {
+      padding:6px 8px; border:1px solid #dde3f5; border-radius:8px; min-width:160px; font-size:12px;
+    }
+    .imp-panel button {
+      padding:6px 10px; border:1px solid #dde3f5; border-radius:8px; background:#f5f7fb; cursor:pointer; font-size:12px;
+    }
+    .imp-state { margin-left:8px; font-size:12px; color:#666; }
+
     /* ===== Sidebar nav ===== */
-    .nav-section { margin-top:16px; }
-    .nav-title { font-size:12px; color:#7a86a7; font-weight:700; letter-spacing:.04em; margin:14px 8px 8px; }
     .nav { display:flex; flex-direction:column; gap:6px; }
     .nav a {
       display:block; padding:10px 12px; border-radius:10px; text-decoration:none;
@@ -69,19 +88,12 @@
 
     .hidden { display:none !important; }
 
-    /* Impersonate panel */
-    #imp-wrap { margin-top:6px; }
-    #imp-toggle { background:#fff; border:1px solid #ccd6ee; border-radius:8px; padding:6px 10px; cursor:pointer; }
-    #imp-panel { margin-top:6px; background:#fff; border:1px solid #ccd6ee; border-radius:10px; padding:10px; }
-    #imp-panel .row { display:flex; gap:8px; flex-wrap:wrap; }
-    #imp-panel input { padding:6px 8px; border:1px solid #dde3f5; border-radius:8px; min-width:180px; }
-    #imp-panel button { padding:6px 10px; border:1px solid #dde3f5; border-radius:8px; background:#f5f7fb; cursor:pointer; }
-
     /* Responsive */
     @media (max-width: 920px){
       .app { grid-template-columns: 1fr; }
       .sidebar { position:relative; height:auto; border-right:none; border-bottom:1px solid var(--border); }
       .grid { grid-template-columns: 1fr; }
+      .imp-panel { width:calc(100vw - 32px); right:0; }
     }
   </style>
 </head>
@@ -95,31 +107,46 @@
         </div>
       </div>
 
-      <div class="nav-section">
-        <nav class="nav">
-          <!-- IDs preserved so existing router logic keeps working -->
-          <a href="#/transactions" id="linkTx" class="active">Transactions</a>
-          <a href="#/documents" id="linkDocs">Documents</a>
-          <!-- Future items go here -->
-        </nav>
-      </div>
+      <nav class="nav">
+        <a href="#/transactions" id="linkTx" class="active">Transactions</a>
+        <a href="#/documents"   id="linkDocs">Documents</a>
+      </nav>
     </aside>
 
     <!-- ===== Main Content ===== -->
     <main class="content">
       <div class="wrap">
-        <!-- Title row (separate from logo row) -->
+        <!-- Title + controls -->
         <div class="title-row">
-          <div class="title" id="appTitle">GP Member Portal</div>
-          <div class="sub" id="buildTag">Build: —</div>
-          <div style="flex:1"></div>
+          <div>
+            <div class="title" id="appTitle">GP Member Portal</div>
+            <div class="sub"   id="buildTag">Build: —</div>
+          </div>
           <div class="topbar">
             <div class="statusline">
               <span id="signedAs" class="sub">Signed out</span>
               <span id="g_id_signin"></span>
             </div>
+
+            <!-- Impersonation in the TOPBAR -->
+            <div class="imp">
+              <button id="imp-toggle" class="imp-btn">Impersonate</button>
+              <div id="imp-panel" class="imp-panel hidden">
+                <div class="imp-row">
+                  <input id="imp-email"  type="email"    placeholder="Act as email (user@domain.com)" />
+                  <input id="imp-reason" type="text"     placeholder="Reason (optional)" />
+                  <input id="imp-token"  type="password" placeholder="Admin token" />
+                </div>
+                <div class="imp-row" style="margin-top:8px;">
+                  <button id="imp-start">Start</button>
+                  <button id="imp-stop">Stop</button>
+                  <span id="imp-state" class="imp-state"></span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+
         <div id="status" class="sub" style="margin-top:6px;"></div>
 
         <!-- KPIs -->
@@ -181,22 +208,6 @@
           </div>
         </div>
 
-        <!-- Impersonation -->
-        <div id="imp-wrap" style="margin-top:12px;">
-          <button id="imp-toggle" class="sub">Impersonate</button>
-          <div id="imp-panel" class="hidden">
-            <div class="row">
-              <input id="imp-email" type="email" placeholder="Act as email (user@domain.com)" />
-              <input id="imp-reason" type="text"  placeholder="Reason (optional)" />
-              <input id="imp-token" type="password" placeholder="Admin token" />
-            </div>
-            <div class="row" style="margin-top:8px;">
-              <button id="imp-start">Start</button>
-              <button id="imp-stop">Stop</button>
-              <span id="imp-state" class="sub"></span>
-            </div>
-          </div>
-        </div>
       </div>
     </main>
   </div>
@@ -209,9 +220,10 @@
     const WEB_CLIENT_ID = '468716163323-st1b43fu76emqlj1cde6mmq770sbeno1.apps.googleusercontent.com';
 
     // ===== utils =====
-    const safe = s => String(s||'').replace(/[&<>"]/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[c]));
+    const safe   = s => String(s||'').replace(/[&<>"]/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[c]));
     const asDate = s => new Date(String(s||'').replace(/-/g,'/'));
-    const money = n => Number(n||0).toLocaleString(undefined,{minimumFractionDigits:2, maximumFractionDigits:2});
+    const money  = n => Number(n||0).toLocaleString(undefined,{minimumFractionDigits:2, maximumFractionDigits:2});
+    const sleep  = ms => new Promise(res => setTimeout(res, ms));
     function setStatus(msg){ const el=document.getElementById('status'); if(el) el.textContent = msg || ''; }
     function parseMoney(v){
       const raw = String(v ?? '').trim(); if (!raw) return 0;
@@ -227,15 +239,39 @@
     function adminHeaders(){ return window.__admin?.token ? { 'X-Admin-Token': window.__admin.token } : {}; }
     function adminBody(){ const o={}; if(window.__admin?.actAs){ o.actAs = window.__admin.actAs; if(window.__admin?.reason) o.reason = window.__admin.reason; } return o; }
 
-    // ===== strict JSON POST with cookies =====
+    // ===== strict JSON POST with cookies (no cache) =====
     async function apiPost(path, body, extraHeaders){
       const headers = { 'Content-Type':'application/json', ...(extraHeaders||{}) };
-      const r = await fetch(path, { method:'POST', headers, credentials:'include', body: JSON.stringify(body || {}) });
-      const ct = r.headers.get('content-type')||''; const text = await r.text();
+      const r = await fetch(path, {
+        method:'POST',
+        headers,
+        credentials:'include',
+        cache:'no-store',
+        body: JSON.stringify(body || {})
+      });
+      const ct = r.headers.get('content-type')||'';
+      const text = await r.text();
       if (!ct.includes('application/json')) throw new Error(`Non-JSON from ${path}: ${r.status} ${text.slice(0,120)}`);
-      const j = JSON.parse(text); if(!r.ok || j.error) throw new Error(j.error || `HTTP ${r.status}`); return j;
+      const j = JSON.parse(text);
+      if (!r.ok || j.error) throw new Error(j.error || `HTTP ${r.status}`);
+      return j;
     }
-    async function me(){ return fetch('/api/me', { credentials:'include' }); }
+    async function me(){
+      return fetch('/api/me', { credentials:'include', cache:'no-store' });
+    }
+
+    // ===== session wait =====
+    async function waitForSession(timeoutMs = 5000){
+      const start = Date.now();
+      while (Date.now() - start < timeoutMs){
+        const r = await me();
+        if (r.ok){
+          try { return await r.json(); } catch { return { user:null }; }
+        }
+        await sleep(150);
+      }
+      throw new Error('Session not ready');
+    }
 
     // ===== render: transactions =====
     function renderTransactions(data){
@@ -343,6 +379,7 @@
     // ===== data loaders =====
     async function loadTransactions(){ const data = await apiPost('/api/get-portal-data', { ...adminBody() }, adminHeaders()); renderTransactions(data); }
     async function loadDocuments(){ const { docs } = await apiPost('/api/list-docs', { ...adminBody() }, adminHeaders()); renderDocuments(docs || []); }
+
     async function downloadDoc(fileId, btn){
       try{
         btn.disabled = true; const old = btn.textContent; btn.textContent = 'Preparing…';
@@ -353,7 +390,7 @@
     }
     document.addEventListener('click', (e)=>{ const b = e.target.closest('.dl'); if (b) downloadDoc(b.getAttribute('data-fid'), b); });
 
-    // ===== router (unchanged IDs) =====
+    // ===== router =====
     function setRoute(hash){
       const isDocs = (hash === '#/documents');
       document.getElementById('card-tx').classList.toggle('hidden', isDocs);
@@ -364,6 +401,18 @@
       if (isDocs) loadDocuments(); else loadTransactions();
     }
     window.addEventListener('hashchange', () => setRoute(location.hash));
+
+    async function reloadActiveTab(){
+      const isDocs = (location.hash === '#/documents');
+      try{
+        if (isDocs) await loadDocuments(); else await loadTransactions();
+      }catch(e){
+        console.error(e);
+        setStatus('Temporary loading issue. Retrying…');
+        await sleep(250);
+        if (isDocs) await loadDocuments(); else await loadTransactions();
+      }
+    }
 
     // ===== GIS init =====
     function initGis(){
@@ -380,19 +429,34 @@
       google.accounts.id.prompt();
     }
 
-    // ===== after sign-in → create server session =====
+    // ===== after sign-in → create server session, then wait, then load active tab =====
     async function afterSignIn(credential){
       try{
         const r = await fetch('/api/session', {
-          method:'POST', headers:{'content-type':'application/json'},
-          credentials:'include', body: JSON.stringify({ credential })
+          method:'POST',
+          headers:{'content-type':'application/json'},
+          credentials:'include',
+          cache:'no-store',
+          body: JSON.stringify({ credential })
         });
         if(!r.ok) throw new Error('session create failed');
-        await start(); // now /api/me will be 200
+
+        const { user } = await waitForSession(5000);
+        if (user?.email){
+          document.getElementById('signedAs').textContent = `Signed in as ${user.email}`;
+          document.getElementById('kpi-name').textContent  = user.name || '—';
+          document.getElementById('kpi-email').textContent = user.email || '—';
+        }
+        if (!location.hash) location.replace('#/transactions');
+        await reloadActiveTab();
+
+        // Optional: warm both tabs once
+        Promise.resolve().then(()=>{ loadDocuments().catch(()=>{}); loadTransactions().catch(()=>{}); });
+
       }catch(e){ console.error(e); setStatus('Sign-in failed. Please try again.'); }
     }
 
-    // ===== impersonate UI =====
+    // ===== impersonation (TOPBAR) =====
     (function(){
       const panel = document.getElementById('imp-panel');
       const toggle= document.getElementById('imp-toggle');
@@ -403,55 +467,86 @@
       const iReason=document.getElementById('imp-reason');
       const iToken =document.getElementById('imp-token');
 
+      // open/close panel
       toggle.addEventListener('click', ()=> panel.classList.toggle('hidden'));
+      document.addEventListener('click', (e)=>{
+        if (!panel.classList.contains('hidden')){
+          const within = e.target.closest('#imp-panel') || e.target.closest('#imp-toggle');
+          if (!within) panel.classList.add('hidden');
+        }
+      });
+
+      async function applyImpersonationUI(){
+        const signedAs = document.getElementById('signedAs');
+        if (window.__admin?.actAs && window.__admin?.token){
+          signedAs.textContent = `Acting as ${window.__admin.actAs} (admin: ${document.getElementById('kpi-email').textContent || 'you'})`;
+          state.textContent = 'Impersonation ON';
+        } else {
+          // reset to /api/me view
+          try{
+            const r = await me();
+            if (r.ok){
+              const { user } = await r.json();
+              signedAs.textContent = `Signed in as ${user?.email || ''}`;
+              document.getElementById('kpi-name').textContent  = user?.name  || '—';
+              document.getElementById('kpi-email').textContent = user?.email || '—';
+            } else {
+              signedAs.textContent = 'Signed out';
+            }
+          }catch{ signedAs.textContent = 'Signed out'; }
+          state.textContent = 'Impersonation OFF';
+        }
+      }
+
       startB.addEventListener('click', async ()=>{
         window.__admin.actAs = (iEmail.value||'').trim().toLowerCase();
         window.__admin.reason= (iReason.value||'').trim();
         window.__admin.token = (iToken.value||'');
         if (!window.__admin.actAs || !window.__admin.token) { state.textContent = 'Enter act-as email and admin token.'; return; }
-        state.textContent = 'Impersonation ON';
-        setRoute(location.hash || '#/transactions');
+        await applyImpersonationUI();
+        panel.classList.add('hidden');
+        await reloadActiveTab(); // immediately reflect impersonation on the active tab
       });
-      stopB.addEventListener('click', ()=>{
+
+      stopB.addEventListener('click', async ()=>{
         window.__admin = { actAs:null, token:null, reason:'' };
-        state.textContent = 'Impersonation OFF';
-        setRoute(location.hash || '#/transactions');
+        await applyImpersonationUI();
+        panel.classList.add('hidden');
+        await reloadActiveTab(); // revert back to self on the active tab
       });
     })();
 
     // ===== start flow =====
     async function start(){
-      if (!location.hash) location.replace('#/transactions');
+      if (!location.hash) location.replace('#/transactions'); else setRoute(location.hash);
       document.getElementById('appTitle').textContent = 'GP Member Portal';
       document.getElementById('buildTag').textContent = 'Build: ' + new Date().toISOString().slice(0,10);
 
-      // 1) do we already have a server session?
+      // Try once
       let r = await me();
       if (r.ok){
         const { user } = await r.json();
         document.getElementById('signedAs').textContent = `Signed in as ${user.email || ''}`;
         document.getElementById('kpi-name').textContent  = user.name || '—';
         document.getElementById('kpi-email').textContent = user.email || '—';
-        setRoute(location.hash || '#/transactions');
+        await reloadActiveTab();
         return;
       }
-      // 2) absorb refresh race
-      await new Promise(res => setTimeout(res, 250));
+      // Brief absorb for refresh race
+      await sleep(250);
       r = await me();
       if (r.ok){
         const { user } = await r.json();
         document.getElementById('signedAs').textContent = `Signed in as ${user.email || ''}`;
         document.getElementById('kpi-name').textContent  = user.name || '—';
         document.getElementById('kpi-email').textContent = user.email || '—';
-        setRoute(location.hash || '#/transactions');
+        await reloadActiveTab();
         return;
       }
-      // 3) no session → prompt GIS
+      // No session → prompt GIS
       initGis();
     }
-
     window.addEventListener('load', start);
   </script>
 </body>
 </html>
-
