--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
 
       <nav class="nav">
         <a href="#/interests"   id="linkInterests">GP Interests</a>
-        <a href="#/transactions" id="linkTx" class="active">Transactions</a>
+        <a href="#/transactions" id="linkTx" class="active">Member Outstanding Balance</a>
         <a href="#/documents"    id="linkDocs">Documents</a>
       </nav>
     </aside>
@@ -780,6 +780,7 @@
   </script>
 </body>
 </html>
+
 
 
 
