--- a/public/index.html
+++ b/public/index.html
@@ -114,9 +114,10 @@
       </div>
 
       <nav class="nav">
-        <a href="#/interests"   id="linkInterests">GP Interests</a>
-        <a href="#/transactions" id="linkTx" class="active">Member Outstanding Balance</a>
-        <a href="#/documents"    id="linkDocs">Documents</a>
+        <a href="#/interests"     id="linkInterests">GP Interests</a>
+        <a href="#/transactions"  id="linkTx" class="active">Member Outstanding Balance</a>
+        <a href="#/documents"     id="linkDocs">Documents</a>
+        <a href="/wire.html"      id="linkWire">Wire Instructions</a>
       </nav>
     </aside>
 
@@ -855,6 +856,7 @@
   </script>
 </body>
 </html>
+
 
 
 
